--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@ console.log(min_number);
 var power=Math.pow(1,9);
 console.log(power);
 
-var name="<Among us> Hello there I am sincerly sorry for the rude indtroduction, I was just finishing some calculations";
+var name="<Among us> Why hello there! I am sincerly sorry for the rude indtroduction, I was just finishing some calculations";
     console.log(name);
 
-    var sus="<Among us> if you are looking for Jamal I beg of you to go back (I tricked him into looking for gold because he was anoying me)";
+    var sus="<Among us> As you can tell I am the among us who hates Jamal. Which means if you are looking for Jamal I beg of you to go back because I tricked him into looking for gold because he was anoying me";
     console.log(sus);
 
     var s0us="<Among us> do you want to hear a seceret? If so go to https://anshthebros.github.io/games/";
